--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/ZP-FappyBird1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ZP-FappyBird1.data.gz",
-        frameworkUrl: buildUrl + "/ZP-FappyBird1.framework.js.gz",
-        codeUrl: buildUrl + "/ZP-FappyBird1.wasm.gz",
+        dataUrl: buildUrl + "/ZP-FappyBird1.data.unityweb",
+        frameworkUrl: buildUrl + "/ZP-FappyBird1.framework.js.unityweb",
+        codeUrl: buildUrl + "/ZP-FappyBird1.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "DiverDanAlpha_03-05-2023",
